# wyoming_pocket_tts

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  DOCS.md  Dockerfile  README.md  build.yaml  config.yaml  pyproject.toml  repository.yaml  run.sh
.github/workflows/: job-docker.yml
tests/: test_handler.py
translations/: en.yaml
wyoming_pocket_tts/: __init__.py  __main__.py  handler.py
