[project]
name = "wyoming-pocket-tts"
version = "1.0.1"
description = "Wyoming protocol server for Kyutai Pocket TTS with voice cloning"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "araa47" }
]
keywords = ["wyoming", "tts", "voice", "pocket-tts", "kyutai", "home-assistant"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]

dependencies = [
    "wyoming>=1.5.0",
    "pocket-tts>=0.1.0",
    "numpy>=1.24.0",
]

[project.scripts]
wyoming-pocket-tts = "wyoming_pocket_tts.__main__:run"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["wyoming_pocket_tts*"]
