[project]
name = "wyoming-pocket-tts"
version = "1.0.4"
description = "Wyoming protocol server for Kyutai Pocket TTS with voice cloning"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "araa47" }
]
keywords = ["wyoming", "tts", "voice", "pocket-tts", "kyutai", "home-assistant"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]

dependencies = [
    "wyoming>=1.5.0",
    "pocket-tts>=0.1.0",
    "numpy>=1.24.0",
    "soundfile>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.15.4",
    "prek>=0.3.4",
    "pytest",
    "pytest-asyncio>=1.3.0",
    "pytest-cov",
    "ty>=0.0.19",
]

[project.scripts]
wyoming-pocket-tts = "wyoming_pocket_tts.__main__:run"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["wyoming_pocket_tts*"]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.isort]
profile = "black"
src_paths = "tests"
line_length = 80
include_trailing_comma = true
multi_line_output = 3

[tool.ruff]
select = ["E", "F", "B"]
exclude = ["__pycache__", ".git", ".venv"]
ignore = ["E501"]
